add recruitment form (50%)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="auth-box-w">
             <div class="logo-w"><a href="index-2.html"><img alt="" src="assets/img/logo-big.png"></a></div>
             <h4 class="auth-header">Sign in to Cerro</h4>
-            <form action="index.html">
+            <form action="recruitment-form.html">
                 <div class="form-group">
                     <label for="">Username</label>
                     <input class="form-control" placeholder="Enter your username" type="text">
