--- a/recruitment-form.html
+++ b/recruitment-form.html
@@ -362,20 +362,25 @@ END - Breadcrumbs
                             </div>
                         </div>
                         <div class="element-wrapper">
-                            <h6 class="element-header">Inline Form Example</h6>
                             <div class="element-box">
-                                <h5 class="form-header">Inline Form</h5>
-                                <div class="form-desc">Discharge best employed your phase each the of shine. Be met even reason consider logbook redesigns. Never a turned interfaces among asking</div>
+                                <h5 class="form-header">Educational Records</h5>
                                 <form class="form-inline">
-                                    <label class="sr-only"> First Name</label>
-                                    <input class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="First Name" type="text">
-                                    <label class="sr-only"> Last Name</label>
-                                    <input class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Last Name" type="text">
-                                    <label class="sr-only"> Username</label>
-                                    <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <div class="input-group-addon">@</div>
-                                        <input class="form-control" placeholder="Username" type="text">
-                                    </div>
+                                    <label class="sr-only"> Degree</label>
+                                    <select class="form-control mb-2 mr-sm-2 mb-sm-0">
+                                    	<option disabled="" selected="">Select a degree</option>
+                                        <option>SD</option>
+                                        <option>SMP</option>
+                                        <option>SMA</option>
+                                        <option>Diploma</option>
+                                        <option>S1</option>
+                                        <option>S2</option>
+                                    </select>
+                                    <label class="sr-only"> School Name</label>
+                                    <input class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="School Name" type="text">
+                                    <label class="sr-only"> Major</label>
+                                    <input class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Major/Concetration" type="text">
+                                    <label class="sr-only"> Year Start</label>
+                                    <input class="multi-daterange form-control" placeholder="Date of birth" type="text" value="10/10/1994">
                                     <button class="btn btn-primary" type="submit"> Submit</button>
                                 </form>
                             </div>
