--- a/recruitment-form.html
+++ b/recruitment-form.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Recruitment Form | Cerro coba master</title>
+    <title>Recruitment Form | Cerro-Timeng</title>
 
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
